Button text changed

--- a/3.html
+++ b/3.html
@@ -6,7 +6,7 @@
 
 <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to Demo.</button>
+Click me to Demo. London is the capital.</button>
 
 <p id="demo"></p>
 
