1st coursera week. HTML basics

--- a/3.html
+++ b/3.html
@@ -9,6 +9,10 @@ onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to Demo. London is the capital.</button>
 
 <p id="demo"></p>
+<br>
+<a href="2.html">
+	2nd page
+</a>
 
 </body>
 </html> 
