--- a/2.html
+++ b/2.html
@@ -1,10 +1,44 @@
 <HTML>
-<HEAD>
-<TITLE>Пример</TITLE>
-</HEAD>
-<SCRIPT>
-x = 2;
-y = x + 2;
-document.writeln( y );
-</SCRIPT>
+	<HEAD>
+		<TITLE>Summation example</TITLE>
+	</HEAD>
+
+
+	<a href="1.html">
+		1st page
+	</a>
+	&nbsp;
+	<a href="3.html">
+		3d page
+	</a>
+
+	<hr></hr>
+	<h1>
+		Sum example 2+2
+	</h1>>
+
+	<SCRIPT>
+	x = 2;
+	y = x + 2;
+	document.writeln( y );
+	</SCRIPT>
+
+	<br>
+	<a href="1.html">
+		<img 
+			src="fifa14.bmp"
+			width = "50%"/>
+	</a>
+
+	<br>
+	
+
+
+	<el>
+		<li>Install Unix</li>
+		<li>Register github account</li>>
+
+	</el>>
+
+
 </HTML>
