--- a/1st_attempts/2.html
+++ b/1st_attempts/2.html
@@ -3,8 +3,10 @@
 		<TITLE>Summation example</TITLE>
 	</HEAD>
 
+	<link rel="stylesheet" type="text/css" href="css/steyle.css">>
 
-	<a href="1.html">
+
+	<a href="1.html" class="greenlink">
 		1st page
 	</a>
 	&nbsp;
@@ -14,8 +16,9 @@
 
 	<hr></hr>
 	<h1>
-		Sum example 2+2
-	</h1>>
+		<span class="indent">Sum</span> example 2+2. 
+		Just simple calculation
+	</h1>
 
 	<SCRIPT>
 	x = 2;
@@ -27,18 +30,18 @@
 	<a href="1.html">
 		<img 
 			src="fifa14.bmp"
-			width = "50%"/>
+			width = "25%"/>
 	</a>
 
 	<br>
 	
 
 
-	<el>
+	<ol>
 		<li>Install Unix</li>
 		<li>Register github account</li>>
 
-	</el>>
+	</ol>>
 
 
 </HTML>
